--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-  <h1>🔥 GMbandit Onchain Ritual 🔥</h1>
+  <h1>🔥 8GMbandit Onchain Ritual on base 🔥</h1>
   <p>The simplest onchain ritual experiment on Base 🔵</p>
 
   <button id="connectBtn">Connect Wallet</button>
