--- a/index.html
+++ b/index.html
@@ -1,226 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GM Ritual Dashboard</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GM Ritual Dashboard 🔥</title>
 
-  <style>
+<style>
     body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #ffffff, #e8f1ff);
-      font-family: "Inter", sans-serif;
-      color: #333;
-      text-align: center;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(to bottom, #ffffff, #e3f0ff);
+        font-family: Arial, sans-serif;
+        text-align: center;
     }
 
-    #walletBar {
-      position: fixed;
-      top: 15px;
-      right: 15px;
-      z-index: 999;
+    h1 {
+        margin-top: 50px;
+        font-size: 32px;
+        color: #004aad;
+        font-weight: 700;
     }
 
-    .walletBtn {
-      padding: 10px 18px;
-      border-radius: 8px;
-      background: #0052ff;
-      color: white;
-      font-weight: 600;
-      border: none;
-      cursor: pointer;
-      transition: 0.2s;
+    #walletBox {
+        position: absolute;
+        top: 20px;
+        right: 20px;
     }
 
-    .walletBtn:hover {
-      background: #003bcc;
+    #connectBtn {
+        background: #0066ff;
+        color: white;
+        border: none;
+        padding: 12px 18px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    #connectBtn:hover {
+        background: #004bd1;
     }
 
     #walletMenu {
-      display: none;
-      background: #fff;
-      padding: 10px;
-      border-radius: 10px;
-      margin-top: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-      min-width: 170px;
+        display: none;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        background: #ffffff;
+        border-radius: 10px;
+        padding: 10px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    }
+
+    #walletAddr {
+        font-size: 15px;
+        margin: 10px 0;
     }
 
     #disconnectBtn {
-      width: 100%;
-      padding: 8px;
-      border-radius: 6px;
-      background: #ff4d4d;
-      color: white;
-      border: none;
-      cursor: pointer;
-      margin-top: 5px;
-    }
-
-    #disconnectBtn:hover {
-      background: #e60000;
-    }
-
-    #title {
-      padding-top: 100px;
-      font-size: 32px;
-      font-weight: 700;
-      color: #003bcc;
-    }
-
-    #buttons {
-      margin-top: 40px;
+        background: #ff4b4b;
+        color: white;
+        width: 100%;
+        border: none;
+        padding: 10px;
+        border-radius: 8px;
+        cursor: pointer;
+        margin-top: 10px;
+        font-weight: 600;
     }
 
     .ritualBtn {
-      padding: 12px 26px;
-      margin: 10px;
-      font-size: 16px;
-      border-radius: 10px;
-      border: none;
-      color: white;
-      cursor: pointer;
-      font-weight: 600;
-      transition: 0.2s;
+        padding: 12px 26px;
+        margin: 15px;
+        font-size: 18px;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        font-weight: 600;
+        color: white;
     }
 
-    .gm { background: #0080ff; }
-    .gn { background: #6639f4; }
-    .sleep { background: #333; }
+    .gm { background: #007bff; }
+    .gm:hover { background: #0066d6; }
 
-    .gm:hover { background: #0067cc; }
-    .gn:hover { background: #512ec2; }
-    .sleep:hover { background: #000; }
+    .gn { background: #7b2bff; }
+    .gn:hover { background: #6622d1; }
+
+    .sleep { background: #2c2c2c; }
+    .sleep:hover { background: #000000; }
 
     #status {
-      margin-top: 30px;
-      font-size: 18px;
-      font-weight: 600;
+        margin-top: 40px;
+        font-size: 20px;
+        font-weight: 600;
+        color: #333;
     }
-  </style>
-</head>
 
+</style>
+</head>
 <body>
 
-  <!-- ✅ Wallet Connect Bar -->
-  <div id="walletBar">
-    <button id="connectBtn" class="walletBtn">Connect Wallet</button>
+<h1>GM Ritual Dashboard ⚡</h1>
 
+<div id="walletBox">
+    <button id="connectBtn">Connect Wallet</button>
     <div id="walletMenu">
-      <div id="walletAddr" style="font-size: 14px; margin-bottom: 10px;"></div>
-      <button id="disconnectBtn">Disconnect</button>
+        <div id="walletAddr">0x0000...</div>
+        <button id="disconnectBtn">Disconnect</button>
     </div>
-  </div>
+</div>
 
-  <!-- ✅ Title -->
-  <div id="title">GM Ritual Dashboard ⚡</div>
+<div style="margin-top: 90px;">
+    <button class="ritualBtn gm" onclick="deploy()">Deploy Ritual 🔮</button>
+</div>
 
-  <!-- ✅ Buttons -->
-  <div id="buttons">
+<div style="margin-top: 40px;">
     <button class="ritualBtn gm" onclick="ritual('GM')">GM Ritual 🚀</button>
     <button class="ritualBtn gn" onclick="ritual('GN')">GN Ritual 🌙</button>
     <button class="ritualBtn sleep" onclick="ritual('GoSleep')">GoSleep Ritual 😴</button>
-  </div>
+</div>
 
-  <!-- ✅ Status -->
-  <div id="status"></div>
+<div id="status"></div>
 
-  <!-- ✅ Script -->
-  <script type="module">
-    import { ethers } from "https://cdnjs.cloudflare.com/ajax/libs/ethers/6.7.1/ethers.min.js";
+<script type="module">
+import { ethers } from "https://cdnjs.cloudflare.com/ajax/libs/ethers/6.7.1/ethers.min.js";
 
-    const contractAddress = "0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A";
+const factoryAddress = "0xb9C0b964E223D0058cdFEB445B4506415117b055";
 
-    const abi = [
-      "function performRitual(string newMessage) payable",
-      "function fee() view returns (uint256)"
-    ];
+const factoryABI = [
+  "function deployContract(address owner,address creator,address collector) returns(address)",
+  "event ContractDeployed(address newContract)"
+];
 
-    let provider = null;
-    let signer = null;
-    let connectedAddress = null;
+const ritualABI = [
+  "function performRitual(string newMessage) payable",
+  "function fee() view returns (uint256)"
+];
 
-    const connectBtn = document.getElementById("connectBtn");
-    const walletMenu = document.getElementById("walletMenu");
-    const walletAddr = document.getElementById("walletAddr");
-    const disconnectBtn = document.getElementById("disconnectBtn");
-    const statusBox = document.getElementById("status");
+let provider = null;
+let signer = null;
+let connectedAddress = null;
+let activeContract = null;
 
-    function shortAddr(addr) {
-      return addr.slice(0, 6) + "..." + addr.slice(-4);
-    }
+const connectBtn = document.getElementById("connectBtn");
+const walletMenu = document.getElementById("walletMenu");
+const walletAddr = document.getElementById("walletAddr");
+const disconnectBtn = document.getElementById("disconnectBtn");
+const statusBox = document.getElementById("status");
 
-    function updateUI() {
-      if (!connectedAddress) {
-        connectBtn.innerText = "Connect Wallet";
-        walletMenu.style.display = "none";
-      } else {
-        connectBtn.innerText = "✅ " + shortAddr(connectedAddress);
-        walletMenu.style.display = "block";
-        walletAddr.innerText = shortAddr(connectedAddress);
-      }
-    }
+function shortAddr(addr) {
+  return addr.slice(0, 6) + "..." + addr.slice(-4);
+}
 
-    connectBtn.onclick = async function () {
-      try {
-        if (!window.ethereum) return alert("Install MetaMask or Base Wallet.");
-        provider = new ethers.BrowserProvider(window.ethereum);
-        const accounts = await ethereum.request({ method: "eth_requestAccounts" });
-        signer = await provider.getSigner();
-        connectedAddress = accounts[0];
+function updateUI() {
+  if (!connectedAddress) {
+    connectBtn.innerText = "Connect Wallet";
+    walletMenu.style.display = "none";
+  } else {
+    connectBtn.innerText = "✅ " + shortAddr(connectedAddress);
+    walletMenu.style.display = "block";
+    walletAddr.innerText = shortAddr(connectedAddress);
+  }
+}
 
-        statusBox.innerText = "🔗 Connected";
-        updateUI();
-      } catch (err) {
-        console.error(err);
-        alert("Failed to connect wallet");
-      }
-    };
+connectBtn.onclick = async function () {
+  try {
+    if (!window.ethereum) return alert("Install MetaMask or Base Wallet.");
+    provider = new ethers.BrowserProvider(window.ethereum);
+    const accounts = await ethereum.request({ method: "eth_requestAccounts" });
+    signer = await provider.getSigner();
+    connectedAddress = accounts[0];
+    updateUI();
+  } catch (err) {
+    alert("Failed to connect wallet");
+  }
+};
 
-    disconnectBtn.onclick = function () {
-      provider = null;
-      signer = null;
-      connectedAddress = null;
+disconnectBtn.onclick = function () {
+  provider = null;
+  signer = null;
+  connectedAddress = null;
+  activeContract = null;
+  statusBox.innerText = "";
+  updateUI();
+};
 
-      statusBox.innerText = "🔌 Disconnected";
-      updateUI();
-    };
+window.deploy = async function () {
+  if (!signer) return alert("Connect wallet first!");
 
-    if (window.ethereum) {
-      window.ethereum.on("accountsChanged", async (accounts) => {
-        if (accounts.length === 0) {
-          connectedAddress = null;
-          signer = null;
-          statusBox.innerText = "🔌 Wallet disconnected";
-        } else {
-          provider = new ethers.BrowserProvider(window.ethereum);
-          signer = await provider.getSigner();
-          connectedAddress = accounts[0];
-        }
-        updateUI();
-      });
-    }
+  const factory = new ethers.Contract(factoryAddress, factoryABI, signer);
 
-    window.ritual = async function (msg) {
-      if (!signer) return alert("Connect wallet first!");
+  try {
+    statusBox.innerText = "⏳ Deploying new ritual contract...";
+    const tx = await factory.deployContract(
+      connectedAddress,
+      connectedAddress,
+      connectedAddress
+    );
+    const receipt = await tx.wait();
 
-      const contract = new ethers.Contract(contractAddress, abi, signer);
+    const event = receipt.logs.find(
+      log => log.fragment && log.fragment.name === "ContractDeployed"
+    );
+    const newAddress = event.args.newContract;
 
-      try {
-        const fee = await contract.fee();
-        statusBox.innerText = "⏳ Sending ritual...";
-        
-        const tx = await contract.performRitual(msg, { value: fee });
-        await tx.wait();
+    activeContract = new ethers.Contract(newAddress, ritualABI, signer);
+    statusBox.innerText = "✅ Deployed new contract: " + newAddress;
+  } catch (err) {
+    statusBox.innerText = "❌ Deploy Failed";
+  }
+};
 
-        statusBox.innerText = "✅ Ritual Sent: " + msg;
-      } catch (err) {
-        console.error(err);
-        statusBox.innerText = "❌ Ritual Failed";
-      }
-    };
-  </script>
+window.ritual = async function (msg) {
+  if (!activeContract) return alert("Deploy contract dulu!");
+
+  try {
+    const fee = await activeContract.fee();
+    statusBox.innerText = "⏳ Sending ritual...";
+    const tx = await activeContract.performRitual(msg, { value: fee });
+    await tx.wait();
+    statusBox.innerText = "✅ Ritual Sent: " + msg;
+  } catch (err) {
+    statusBox.innerText = "❌ Ritual Failed";
+  }
+};
+
+</script>
 
 </body>
 </html>
