--- a/index.html
+++ b/index.html
@@ -1,211 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>GM Bandit — Ritual on Base</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>GM Bandit Ritual | Base</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- WalletConnect Modal + Ethers.js -->
+  <script src="https://unpkg.com/@walletconnect/modal@2.6.2/dist/index.umd.js"></script>
+  <script src="https://unpkg.com/ethers@6.6.0/dist/ethers.umd.min.js"></script>
+
   <style>
     body {
       margin: 0;
-      padding: 0;
-      font-family: "Inter", sans-serif;
-      background: linear-gradient(135deg, #ffffff, #f1f5ff);
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg,#ffffff,#dff0ff);
       text-align: center;
-    }
-
-    header {
-      width: 100%;
-      padding: 15px;
-      background: #ffffff;
-      border-bottom: 1px solid #ddd;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-sizing: border-box;
-    }
-
-    #addressDisplay {
-      font-size: 14px;
-      color: #333;
-      font-weight: 500;
-    }
-
-    .main-container {
-      margin-top: 60px;
+      padding: 20px;
     }
 
     h1 {
-      font-size: 36px;
-      color: #0052ff;
+      font-size: 28px;
+      font-weight: bold;
       margin-bottom: 10px;
     }
 
-    h2 {
-      font-weight: 400;
-      color: #555;
-    }
-
-    button {
-      margin: 10px;
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: none;
+    .address-box {
+      display: inline-block;
+      background: #0066ff;
+      color: white;
+      padding: 10px 18px;
+      border-radius: 10px;
       cursor: pointer;
-      font-weight: 600;
-      transition: 0.2s;
+      margin-bottom: 20px;
     }
 
-    #connectBtn {
-      background: #0052ff;
-      color: white;
-    }
-
-    #disconnectBtn {
-      background: #ff4444;
-      color: white;
+    .dropdown {
+      background: white;
+      padding: 12px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      margin-top: 5px;
       display: none;
     }
 
-    .action-button {
-      background: #202020;
+    button {
+      font-size: 18px;
+      padding: 12px 22px;
+      margin: 10px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
       color: white;
+      font-weight: bold;
     }
 
-    #deployBtn {
-      background: #0a84ff;
-      color: white;
-    }
+    .gm-btn { background:#007bff; }
+    .gn-btn { background:#7b00ff; }
+    .sleep-btn { background:#333333; }
 
-    #status {
-      margin-top: 15px;
-      font-size: 15px;
-      color: #333;
+    .result {
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      color: red;
     }
   </style>
 </head>
-
 <body>
 
-<header>
-  <div style="font-weight:700;font-size:18px;color:#0052ff;">GM Bandit</div>
-  <button id="connectBtn">Connect Wallet</button>
-  <button id="disconnectBtn">Disconnect</button>
-</header>
+  <h1>GM Ritual Dashboard ⚡</h1>
 
-<div class="main-container">
-  <h1>GM Bandit Ritual</h1>
-  <h2>Do your daily onchain ritual on Base</h2>
+  <!-- Wallet UI -->
+  <div id="walletSection">
+    <button id="connectBtn" style="background:#007bff;color:white;">Connect Wallet</button>
 
-  <button class="action-button" onclick="sendRitual('GM')">GM Ritual 🙏</button>
-  <button class="action-button" onclick="sendRitual('GN')">GN Ritual 🌙</button>
-  <button class="action-button" onclick="sendRitual('GoSleep')">GoSleep Ritual 😴</button>
+    <div id="walletBox" style="display:none;">
+      <div class="address-box" onclick="toggleDropdown()">
+        ✅ <span id="walletAddrShort">0x...</span>
+      </div>
 
-  <br /><br />
+      <div id="dropdownMenu" class="dropdown">
+        <div id="walletAddrFull" style="margin-bottom:10px;font-weight:bold;"></div>
+        <button style="background:#ff4444;width:100%;" onclick="disconnectWallet()">Disconnect</button>
+      </div>
+    </div>
+  </div>
 
-  <button id="deployBtn" onclick="window.location.href='https://gm-bandit.vercel.app/deploy'">
-    Deploy Smart Contract
-  </button>
+  <!-- Ritual Buttons -->
+  <div>
+    <button class="gm-btn" onclick="ritual('GM')">GM Ritual 🚀</button>
+    <button class="gn-btn" onclick="ritual('GN')">GN Ritual 🌙</button>
+    <button class="sleep-btn" onclick="ritual('GoSleep')">GoSleep Ritual 😴</button>
+  </div>
 
-  <div id="status"></div>
-</div>
+  <div id="result" class="result"></div>
 
-<script>
-  const FACTORY = "0xb9C0b964E223D0058cdFEB445B4506415117b055"; 
+  <script>
+    const projectId = "9edbc818144415c5ac238d7d71ae923c"; // Demo ID, boleh pake
+    let provider = null;
+    let signer = null;
+    let walletAddress = "";
 
-  const GMbanditABI = [
-    {
-      "inputs":[{"internalType":"string","name":"newMessage","type":"string"}],
-      "name":"performRitual",
-      "outputs":[],
-      "stateMutability":"payable",
-      "type":"function"
+    const CONTRACT_ADDRESS = "0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A";
+    const CONTRACT_ABI = [
+      "function performRitual(string calldata message) external"
+    ];
+
+    // Toggle dropdown menu (Disconnect)
+    function toggleDropdown() {
+      const menu = document.getElementById("dropdownMenu");
+      menu.style.display = menu.style.display === "block" ? "none" : "block";
     }
-  ];
 
-  let provider;
-  let signer;
-
-  async function switchToBase() {
-    try {
-      await window.ethereum.request({
-        method: "wallet_switchEthereumChain",
-        params: [{ chainId: "0x2105" }],
+    // Connect Wallet using WalletConnect
+    async function connectWallet() {
+      const modal = new WalletConnectModal({
+        projectId,
+        themeMode: "dark",
+        explorerRecommendedWalletIds: "ALL",
       });
-    } catch (err) {
-      if (err.code === 4902) {
-        await window.ethereum.request({
-          method: "wallet_addEthereumChain",
-          params: [
-            {
-              chainId: "0x2105",
-              chainName: "Base Mainnet",
-              rpcUrls: ["https://mainnet.base.org"],
-              nativeCurrency: {
-                name: "ETH",
-                symbol: "ETH",
-                decimals: 18,
-              },
-              blockExplorerUrls: ["https://basescan.org"],
-            },
-          ],
+
+      try {
+        const session = await modal.openModal();
+
+        if (!session) {
+          alert("Connection canceled.");
+          return;
+        }
+
+        walletAddress = session.namespaces.eip155.accounts[0].split(":")[2];
+
+        provider = new ethers.BrowserProvider({
+          request: async (args) => modal.rpcRequest(args),
         });
+
+        signer = await provider.getSigner();
+
+        // UI Update
+        document.getElementById("connectBtn").style.display = "none";
+        document.getElementById("walletBox").style.display = "block";
+        document.getElementById("walletAddrShort").textContent =
+          walletAddress.slice(0, 6) + "..." + walletAddress.slice(-4);
+        document.getElementById("walletAddrFull").textContent = walletAddress;
+
+      } catch (err) {
+        alert("Wallet connection failed!");
+        console.log(err);
       }
     }
-  }
 
-  async function connectWallet() {
-    if (!window.ethereum) {
-      alert("MetaMask not found!");
-      return;
+    // Disconnect
+    function disconnectWallet() {
+      provider = null;
+      signer = null;
+      walletAddress = "";
+
+      document.getElementById("walletBox").style.display = "none";
+      document.getElementById("connectBtn").style.display = "block";
     }
 
-    await switchToBase();
+    // Ritual Function
+    async function ritual(type) {
+      if (!signer) {
+        alert("Connect wallet first!");
+        return;
+      }
 
-    provider = new ethers.providers.Web3Provider(window.ethereum);
-    await provider.send("eth_requestAccounts", []);
-    signer = provider.getSigner();
+      const contract = new ethers.Contract(CONTRACT_ADDRESS, CONTRACT_ABI, signer);
 
-    const addr = await signer.getAddress();
-    document.getElementById("connectBtn").style.display = "none";
-    document.getElementById("disconnectBtn").style.display = "inline-block";
-    document.getElementById("status").innerHTML = "✅ Connected: " + addr;
-  }
-
-  async function disconnectWallet() {
-    document.getElementById("connectBtn").style.display = "inline-block";
-    document.getElementById("disconnectBtn").style.display = "none";
-    document.getElementById("status").innerHTML = "❌ Wallet disconnected";
-  }
-
-  async function sendRitual(type) {
-    if (!signer) {
-      document.getElementById("status").innerHTML = "⚠️ Connect your wallet first!";
-      return;
+      try {
+        const tx = await contract.performRitual(type);
+        document.getElementById("result").style.color = "green";
+        document.getElementById("result").textContent = "✅ Ritual Sent: " + tx.hash;
+      } catch (err) {
+        console.error(err);
+        document.getElementById("result").style.color = "red";
+        document.getElementById("result").textContent = "❌ Ritual Failed!";
+      }
     }
-
-    document.getElementById("status").innerHTML = "⏳ Sending ritual...";
-
-    try {
-      const contract = new ethers.Contract(FACTORY, GMbanditABI, signer);
-      const tx = await contract.performRitual(type, {
-        value: ethers.utils.parseEther("0.00000033"),
-      });
-
-      document.getElementById("status").innerHTML =
-        "✅ Ritual sent! TX: <a href='https://basescan.org/tx/" +
-        tx.hash +
-        "' target='_blank'>" +
-        tx.hash.substring(0, 12) +
-        "...</a>";
-    } catch (err) {
-      document.getElementById("status").innerHTML = "❌ Failed: " + err.message;
-    }
-  }
-
-  document.getElementById("connectBtn").onclick = connectWallet;
-  document.getElementById("disconnectBtn").onclick = disconnectWallet;
-</script>
+        
+    document.getElementById("connectBtn").addEventListener("click", connectWallet);
+  </script>
 
 </body>
 </html>
