--- a/index.html
+++ b/index.html
@@ -1,178 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GM Bandit</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GM Ritual</title>
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(180deg, #0e172a, #1e293b, #334155);
-      color: #f8fafc;
-      text-align: center;
-    }
-    header {
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    #logo {
-      font-size: 26px;
-      font-weight: 700;
-    }
-    #connectButton, #disconnectButton {
-      padding: 10px 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      border: none;
-      font-size: 15px;
-      font-weight: 600;
-      transition: 0.2s;
-    }
-    #connectButton {
-      background: #3b82f6;
-      color: white;
-    }
-    #connectButton:hover {
-      background: #2563eb;
-    }
-    #disconnectButton {
-      background: #ef4444;
-      color: white;
-      margin-left: 10px;
-      display: none;
-    }
-    #main-buttons {
-      margin-top: 100px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      width: 80%;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .action-btn {
-      padding: 15px;
-      border-radius: 10px;
-      background: #475569;
-      color: white;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: 600;
-      border: none;
-      transition: 0.2s;
-    }
-    .action-btn:hover {
-      background: #64748b;
-    }
-  </style>
+<!-- Ethers.js UMD -->
+<script src="https://unpkg.com/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+
+<!-- RainbowKit Connector UMD -->
+<script src="https://unpkg.com/@rainbow-me/rainbowkit-connector@1.0.0/dist/rkc.js"></script>
+
+<style>
+body {
+  margin: 0;
+  background: #0f0f1b;
+  font-family: Arial, sans-serif;
+  color: white;
+  text-align: center;
+  padding: 40px 20px;
+}
+.button {
+  padding: 12px 20px;
+  background: #1e5eff;
+  border-radius: 10px;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 10px;
+}
+.disconnect {
+  padding: 10px 16px;
+  background: red;
+  border-radius: 10px;
+  color:white;
+  display:none;
+  border:none;
+  font-size:16px;
+  margin-top:10px;
+}
+.ritual-btn {
+  padding: 14px 24px;
+  border-radius: 12px;
+  border:none;
+  font-size:20px;
+  margin:10px;
+  cursor:pointer;
+}
+.gm {
+  background:#1d7bff;
+}
+.gn {
+  background:#8d36ff;
+}
+.sleep {
+  background:#333;
+}
+</style>
 </head>
 
 <body>
-<header>
-  <div id="logo">GM Ritual</div>
-  <div>
-    <button id="connectButton">Connect Wallet</button>
-    <button id="disconnectButton">Disconnect</button>
-  </div>
-</header>
 
-<div id="main-buttons">
-  <button class="action-btn" id="gmBtn">GM 🌞</button>
-  <button class="action-btn" id="gnBtn">GN 🌙</button>
-  <button class="action-btn" id="sleepBtn">Go Sleep 😴</button>
-  <button class="action-btn" onclick="window.location='/deploy'">Deploy Ritual Contract 🔮</button>
+<h1>GM Ritual Dashboard ⚡</h1>
+
+<button id="connectButton" class="button">Connect Wallet</button>
+<button id="disconnectButton" class="disconnect" onclick="disconnectWallet()">Disconnect</button>
+
+<div style="margin-top:50px;">
+  <button class="ritual-btn gm" onclick="runRitual('GM')">GM Ritual 🌞</button>
+  <button class="ritual-btn gn" onclick="runRitual('GN')">GN Ritual 🌙</button>
+  <button class="ritual-btn sleep" onclick="runRitual('SLEEP')">GoSleep Ritual 😴</button>
 </div>
-
-<script src="https://cdn.ethers.io/lib/ethers-6.3.0.umd.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@walletconnect/ethereum-provider@2/dist/umd/index.min.js"></script>
 
 <script>
 let provider = null;
-let web3Provider = null;
+let signer = null;
 let signerAddress = null;
 
-const CONTRACT = "0x725Ccb4ddCB715f468b301395Dfd1b1efDb5308A";
-const ABI = [
-  {
-    "inputs":[{"name": "newMessage","type":"string"}],
-    "name":"performRitual",
-    "outputs":[],
-    "stateMutability":"payable",
-    "type":"function"
-  }
-];
-
-// Connect wallet (WalletConnect v1)
 async function connectWallet() {
   try {
-    provider = new WalletConnectProvider.default({
-      rpc: {
-        8453: "https://mainnet.base.org"
-      },
-      chainId: 8453
+    provider = await window.RKC.connect({
+      projectId: "dbb8f3da5c5b5f3ac97a6ac3cb75e359",
+      chains: [{
+        id: 8453,
+        name: "Base",
+        rpcUrls: ["https://mainnet.base.org"]
+      }]
     });
 
-    await provider.enable();
-
-    web3Provider = new ethers.providers.Web3Provider(provider);
-    const signer = web3Provider.getSigner();
+    const ethersProvider = new ethers.providers.Web3Provider(provider);
+    signer = ethersProvider.getSigner();
     signerAddress = await signer.getAddress();
 
     document.getElementById("connectButton").innerText =
-      signerAddress.substring(0,6)+"..."+signerAddress.slice(-4);
+      signerAddress.substring(0,6) + "..." + signerAddress.slice(-4);
 
     document.getElementById("disconnectButton").style.display = "inline-block";
 
-  } catch(e) {
+  } catch (e) {
     alert("Connection failed: " + e.message);
   }
 }
 
 function disconnectWallet() {
-  if (provider) {
-    provider.disconnect();
-  }
+  window.RKC.disconnect();
+  signer = null;
+  signerAddress = null;
+
   document.getElementById("connectButton").innerText = "Connect Wallet";
   document.getElementById("disconnectButton").style.display = "none";
-  signerAddress = null;
 }
 
-// Send ritual
-async function sendRitual(msg) {
-  if (!signerAddress) {
+async function runRitual(type) {
+  if (!signer) {
     alert("Connect wallet first!");
     return;
   }
 
-  const contract = new ethers.Contract(CONTRACT, ABI, web3Provider.getSigner());
-
-  try {
-    const tx = await contract.performRitual(msg, {
-      value: ethers.utils.parseEther("0.0001")
-    });
-    alert("Tx sent ✅ " + tx.hash);
-  } catch(e) {
-    alert("Transaction failed: " + e.message);
-  }
+  // Dummy ritual (belum ke smart contract)
+  alert(type + " ritual executed!");
 }
 
-// UI hooks
 document.getElementById("connectButton").onclick = connectWallet;
-document.getElementById("disconnectButton").onclick = disconnectWallet;
-
-document.getElementById("gmBtn").onclick = () => sendRitual("GM Ritual 🌞");
-document.getElementById("gnBtn").onclick = () => sendRitual("GN Ritual 🌙");
-document.getElementById("sleepBtn").onclick = () => sendRitual("GoSleep 😴");
-
-    </script>
-
-<script src="https://cdn.ethers.io/lib/ethers-6.3.0.umd.min.js"></script>
+</script>
 
 </body>
 </html>
